# state-of-the-art-project-template

./: CMakeLists.txt  README.md
lib1/: CMakeLists.txt
lib1/include/MyProject/lib1/: lib1.h
lib1/src/: lib1.cpp  lib1_private.h
lib1/tests/: CMakeLists.txt
lib2/: CMakeLists.txt
lib2/include/MyProject/lib2/: lib2.h
